#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([clsd], [0.1], [blub@blah.com])
AC_CONFIG_SRCDIR([.])
# AC_CONFIG_SRCDIR([config.cc])
AC_CONFIG_HEADERS([config_ac.h])
AM_INIT_AUTOMAKE

AC_CONFIG_FILES([Makefile])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CXX
# AC_PROG_CC
AX_CXX_COMPILE_STDCXX_11

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([pow])

AC_OUTPUT
